--- a/Baccarat/Try.ipynb
+++ b/Baccarat/Try.ipynb
@@ -1,5 +1,48 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "ce6ddebe",
+   "metadata": {},
+   "source": [
+    "# Baccarat\n",
+    "## 1. Rules\n",
+    "link to wiki"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46828bd0",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c14738e3",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
